k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: taskpool-api-svc
  annotations:
    cloud.google.com/backend-config: '{"default": "taskpool-backend-config"}'
spec:
  type: NodePort
  selector:
    app: taskpool-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
