k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taskpool-api-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: taskpool-api-ip
    networking.gke.io/managed-certificates: taskpool-cert
    kubernetes.io/ingress.allow-http: "false"
    cloud.google.com/backend-config: '{"default": "taskpool-backend-config"}'
spec:
  rules:
    - host: taskpool.duckdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: taskpool-api-svc
                port:
                  number: 80
